@startuml class-diagram

class User {
  - id: string
  - name: string
  - projects: Project[]
  - achievements: Achievement[]
  + addProject(): void
  + unlockAchievement(): void
}

class Achievement {
  - id: string
  - name: string
  - description: string
  - unlockedAt: Date
  + markUnlocked(): void
}

class Project {
- id: string
- name: string
- tasks: Task[]
+ calculateProgress(): Progress
}

class Progress {
  - value: number
  + toPercentage(): number
  + isCompleted(): boolean
}

enum TaskStatus {
pending,
in_progress,
completed
}

class Task {
- id: string
- title: string
- status: TaskStatus
- dueDate: Date
+ markCompleted(): void
}

Project "1" *-- "0..*" Task: contains
User "1" *-- "0..*" Project: manages
User "1" *-- "0..*" Achievement: unlock
Project "1" o-- "1" Progress: calculate

@enduml